fix plural localization, fix some views of templates. Add comment ordering

--- a/D2/NewsPortal/templates/create.html
+++ b/D2/NewsPortal/templates/create.html
@@ -4,11 +4,14 @@
     {% trans "Create" %}
 {% endblock amount1 %}
 
-{% block top %}
+{% block time %}
+{% endblock time %}
+
+
 {% block amount2 %}
     <h1 class="fst-italic h1 me-auto">{% trans "Create" %}</h1>
 {% endblock amount2 %}
-{% endblock top %}
+
 
 {% block preview %}
 {% endblock %}
