--- a/D2/NewsPortal/templates/delete.html
+++ b/D2/NewsPortal/templates/delete.html
@@ -4,6 +4,9 @@
     {% trans "Delete"%}
 {% endblock amount1 %}
 
+{% block time %}
+{% endblock time %}
+
 {% block amount2 %}
     <h1 class="fst-italic h1 me-auto">{% trans "Are You sure you want to DELETE ?" %}</h1>
 {% endblock amount2 %}
