--- a/D2/NewsPortal/templates/edit.html
+++ b/D2/NewsPortal/templates/edit.html
@@ -4,11 +4,13 @@
     {% trans "Edit" %}
 {% endblock amount1 %}
 
-{% block top %}
+{% block time %}
+{% endblock time %}
+
+
 {% block amount2 %}
     <h1 class="fst-italic h1 me-auto">{% trans "Edit" %}</h1>
 {% endblock amount2 %}
-{% endblock top %}
 
 {% block preview %}
 {% endblock %}
