--- a/D2/NewsPortal/templates/flatpages/contact_page.html
+++ b/D2/NewsPortal/templates/flatpages/contact_page.html
@@ -9,6 +9,9 @@
      {% trans Contacts %}
 {% endblock amount1 %}
 
+{% block time %}
+{% endblock time %}
+
 {% block amount2 %}
 <h1 class="fst-italic h1 me-auto">{% trans "Contacts" %}</h1>
 {% endblock amount2 %}
