--- a/D2/NewsPortal/templates/search.html
+++ b/D2/NewsPortal/templates/search.html
@@ -2,9 +2,12 @@
 {% extends 'news.html' %}
 {% load i18n %}
 
-{% block top %}
+{% block time %}
+{% endblock time %}
+
+{% block amount2 %}
 <h1 class="fst-italic h1 me-auto">{% trans "Filter" %}</h1>
-{% endblock top %}
+{% endblock amount2 %}
 
 {% block preview %}
 {% endblock %}
