--- a/D2/NewsPortal/templates/flatpages/about.html
+++ b/D2/NewsPortal/templates/flatpages/about.html
@@ -5,6 +5,9 @@
     {% trans "About us" %}
 {% endblock amount1 %}
 
+{% block time %}
+{% endblock time %}
+
 {% block amount2 %}
 <h1 class="fst-italic h1 me-auto">{% trans "About" %}</h1>
 {% endblock amount2 %}
