--- a/D2/NewsPortal/templates/post.html
+++ b/D2/NewsPortal/templates/post.html
@@ -9,6 +9,9 @@
     {{ post.title }}
 {% endblock amount1 %}
 
+{% block time %}
+{% endblock time %}
+
 {% block amount2 %}
     <h1 class="fst-italic h1 me-auto">{{ post.get_type_display }}</h1>
 {% endblock amount2 %}
@@ -22,7 +25,7 @@
         <p class="blog-post-meta">{{ post.post_date }} {% trans "Author:" %} <a href="#">{{post.author}}</a></p>
         <p> {{post.post_text |censor }} </p>
 
-
+        <hr>
 {% if perms.newsapp.change_post or perms.newsapp.delete_post %}
         {# добавляем проверку что пользователь является автором этого поста #}
         {# когда появятся модераторы и редакторы прийдется сделать проверку и для них #}
@@ -30,8 +33,12 @@
             <a class="btn btn-outline-primary rounded-pill" href="{{ post.id }}/edit">{% trans "Edit" %}</a>
             <a class="btn btn-outline-primary rounded-pill" href="{{ post.id }}/delete">{% trans "Delete" %}</a>
         {% endif %}
-{% endif %}
 
+{% endif %}
+{% if user.is_authenticated %}
+        <a class="btn btn-outline-primary rounded-pill" href="{{ post.id }}/comment">{% trans "Comment" %}</a>
+{%else %} <p> {% trans "Login to comment" %}</p>
+{% endif %}
 {% if comments %}
         <hr>
         <h5><i>
