--- a/D2/NewsPortal/templates/subscriptions.html
+++ b/D2/NewsPortal/templates/subscriptions.html
@@ -1,9 +1,12 @@
 {% extends 'flatpages/default.html' %}
 {% load i18n %}
 
-{% block top %}
+{% block time %}
+{% endblock time %}
+
+{% block amount2 %}
 <h1 class="fst-italic h1 me-auto">{% trans "Subscriptions" %}</h1>
-{% endblock top %}
+{% endblock amount2 %}
 
 {% block preview %}
 {% endblock %}
