--- a/AnnouncementBoard/templates/board/adverts.html
+++ b/AnnouncementBoard/templates/board/adverts.html
@@ -7,8 +7,17 @@
         {% for advert in adverts %}
         <a href="{{advert.id}}"> <i>{{ advert.title }}</i></a>
         <p>{{ advert.date }}</p>
+        <div class="b-example-divider"></div>
         {% endfor %}
     {% else %}
         <h2>{% trans "Нет объявлений" %}</h2>
     {% endif %}
+{% endblock %}
+
+{% block footer-end %}
+<div class="container">
+    <div class="text-center mt-5">
+        <h3>Доска объявлений</h3>
+    </div>
+</div>
 {% endblock %}
