Add create, edit and delete advert to site

--- a/AnnouncementBoard/templates/account/login.html
+++ b/AnnouncementBoard/templates/account/login.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
-{% load static %}
-{% load i18n %}
-{% load account socialaccount %}
+{% load static i18n account socialaccount %}
   <head>
     <meta charset="utf-8">
     <title>{% trans "Вход" %}</title>
@@ -12,20 +10,20 @@
     <link href={% static "css/sign-in.css" %} rel="stylesheet">
   </head>
   <body class="text-center">
-
+  {% get_providers as socialaccount_providers %}
     <main class="form-signin w-100 m-auto">
 
-      <form method="post" action="{% url 'account_login' %}">
+      <form method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
 
           {% if form.errors %}
             <p>{% trans "Пожалуйста, введите правильные имя пользователя и пароль. Оба поля могут быть чувствительны к регистру." %}</p>
           {% endif %}
         <img class="mb-4" src={% static "assets/logo/png-clipart-portal-3-round-blue-and-grey-decor.png" %} alt="" width="128" height="128">
-        <h1 class="h5 mb-3 fw-normal">{% trans "Войдите или зарегистрируйтесь" %}</h1>
+        <h1 class="h5 mb-3 fw-normal">{% trans "Войдите" %}</h1>
 
         <div class="form-floating">
-          <input type="text" name="username" class="form-control" id="id_username" placeholder="name@example.com">
+          <input type="email" name="login" class="form-control" id="id_username" placeholder="name@example.com">
           <label for="id_username">{% trans "Ваш email" %}</label>
         </div>
         <div class="form-floating">
@@ -36,22 +34,24 @@
           <button class="w-100 btn btn-lg btn-primary" type="submit" value="login">{% trans "Войти" %}</button>
 
       </form>
+       <h1 class="h6 mb-3 fw-normal">{% trans "или зарегистрируйтесь" %}</h1>
+      <li class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="{{ signup_url }}">{% trans "Регистрация" %}</a></li>
+        <div>
+          <hr>
+          {% get_providers as socialaccount_providers %}
+          {% if socialaccount_providers %}
+          <h6 style="font-size: 85%"> войти с помощью </h6>
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 
-      <li class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="{{ signup_url }}">{% trans "Зарегистрироваться" %}</a></li>
-      {% get_providers as socialaccount_providers %}
-      {% if socialaccount_providers %}
-        Есть
-      <div class="socialaccount_ballot">
-        <ul class="socialaccount_providers">
-          {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-        </ul>
+            <li>
+              <a href="{% provider_login_url "yandex" %}" class="d-block link-dark text-decoration-none" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="https://avatars.mds.yandex.net/get-lpc/1364677/210f6a87-c8ab-4709-b0ad-1346e30eac9a/orig" alt="mdo" width="32" height="32" class="rounded-circle">
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      {% include "socialaccount/snippets/login_extra.html" %}
-      {% else %}
-        нет
-      <p>{% blocktrans %}If you have not created an account yet, then please
-      <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-    {% endif %}
+      {% endif %}
       <p class="mt-5 mb-3 text-muted">&copy; 2023</p>
     </main>
   </body>
