--- a/AnnouncementBoard/templates/board/index.html
+++ b/AnnouncementBoard/templates/board/index.html
@@ -35,7 +35,16 @@
                         <li class="nav-item"><a class="nav-link" href="/adverts">{% trans "объявления" %}</a></li>
                         <li class="nav-item"><a class="nav-link" href="/adverts">{{ user.username }}</a></li>
                         {% if user.is_authenticated %}
-                        <li class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="/accounts/logout">{% trans "выйти" %}</a></li>
+
+                            <form class="btn btn-sm btn-outline-secondary" method="post" action="{% url 'account_logout' %}">
+                              {% csrf_token %}
+                              {% if redirect_field_value %}
+                              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                              {% endif %}
+                              <button  type="submit">{% trans 'Выход' %}</button>
+                            </form>
+<!--                            <a class="nav-link" href="/accounts/logout">{% trans "выйти" %}</a>-->
+
                         {% else %}
                         <li class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="/accounts/login">{% trans "войти" %}</a></li>
                         {% endif %}
@@ -45,15 +54,26 @@
         </nav>
         <div class="b-example-divider"></div>
         <!-- Page content-->
-            {% block body %}
-            <div class="text-center mt-5">
-                <h3>{% trans "Добро пожаловать на наш сайт посвященный MMMORPG - Рога и копыта" %}</h3>
+        {% block buttons %}
+        <nav class="navbar navbar-expand-lg">
+            <div class="navbar-nav ms-auto mb-2 mb-lg-0">
+                {% if user.is_authenticated %}
+                    <a class="mt-3 btn btn-outline-primary rounded-pill" href="/adverts/create">{% trans "Написать объявление" %}</a>
             </div>
-            {% endblock %}
+            {% endif %}
+        </nav>
+        {% endblock %}
+        <hr>
+
+        {% block body %}
+        <div class="text-center mt-5">
+            <h3>{% trans "Добро пожаловать на наш сайт посвященный MMMORPG - Рога и копыта" %}</h3>
+        </div>
+        {% endblock %}
 
         {% block footer-end %}
         <div class="container">
-            <div class="text-center mt-5">
+            <div class="footer text-center mt-5">
                 <h3>@ 2023</h3>
             </div>
         </div>
