--- a/AnnouncementBoard/templates/board/delete.html
+++ b/AnnouncementBoard/templates/board/delete.html
@@ -5,7 +5,7 @@
   <h1 class="fst-italic h1 me-auto">{% trans "Are You sure you want to DELETE ?" %}</h1>
   <form action="" method="post">
     {% csrf_token %}
-    <p>{% trans "Delete" %} "{{ object.title }}"?</p>
+    <p>{% trans "Delete" %} "{{ object }}"?</p>
     <input class="btn btn-outline-primary rounded-pill" type="submit" value={% trans "Delete" %}>
   </form>
 
