--- a/AnnouncementBoard/templates/board/index.html
+++ b/AnnouncementBoard/templates/board/index.html
@@ -33,6 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="/adverts">{% trans "объявления" %}</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/replies">{% trans "отклики" %}</a></li>
                         <li class="nav-item"><a class="nav-link" href="/adverts">{{ user.username }}</a></li>
                         {% if user.is_authenticated %}
 
