--- a/MyHobby/_pgbackup/css/style_1686905911.css
+++ b/MyHobby/_pgbackup/css/style_1686905911.css
@@ -39,10 +39,10 @@ body {
 
 .navigation li {
     margin-right: 12px;
-    margin-left: 12px;
+    margin-left:  12px;
 }
 
-.navigation a:hover {
+.navigation a:hover{
     background-color: gray;
     text-decoration: none;
     color: #101010;
@@ -56,13 +56,8 @@ body {
 }
 
 .content {
-    display: grid;
-    grid-template-columns: 1% minmax(200px, 400px) minmax(200px, 400px) 1fr 1%;
-    grid-template-rows: 20px 1fr 1fr 20px;
-    grid-area: 2 / 1 / 3 / 2;
-    grid-auto-columns: 0px;
-    gap: 6px;
-    grid-template-areas: 'top top top top top' 'l-content content content side r-content' 'l-content content content side r-content' 'bottom bottom bottom bottom bottom';
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .content li {
@@ -74,7 +69,9 @@ body {
 }
 
 .content img {
-    margin: 1%;
+    float: left;
+    vertical-align: top;
+    margin-right: 1%;
 }
 
 .content p {
@@ -95,9 +92,5 @@ body {
     color: white;
     text-decoration: none;
     margin-right: 12px;
-    margin-left: 12px;
-}
-
-.text {
-    grid-area: content;
+    margin-left:  12px;
 }
