--- a/MyHobby/_pgbackup/css/style_1686906720.css
+++ b/MyHobby/_pgbackup/css/style_1686906720.css
@@ -56,8 +56,10 @@ body {
 }
 
 .content {
+    margin-left: 1%;
+    margin-right: 1%;
     display: grid;
-    grid-template-columns: 1% minmax(200px, 400px) minmax(200px, 400px) 1fr 1%;
+    grid-template-columns: 1% 1fr 1fr 1fr 1%;
     grid-template-rows: 20px 1fr 1fr 20px;
     grid-area: 2 / 1 / 3 / 2;
     grid-auto-columns: 0px;
@@ -74,7 +76,9 @@ body {
 }
 
 .content img {
-    margin: 1%;
+    float: left;
+    vertical-align: top;
+    margin-right: 1%;
 }
 
 .content p {
