--- a/Chat/static/style/lk/style.css
+++ b/Chat/static/style/lk/style.css
@@ -15,6 +15,20 @@ body {
   flex-direction: column;
 }
 
+.topmenu {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.topmenu li {
+  padding: 1rem;
+  display: flex;
+}
+
+.topmenu a {
+  text-decoration: none;
+}
+
 .container {
   max-width: 1000px;
   padding: 2rem 1rem;
@@ -24,7 +38,7 @@ body {
 }
 
 .header {
-  height: 100px;
+  min-height: 50px;
   background-color: darkkhaki;
 }
 
@@ -64,6 +78,6 @@ button {
 }
 
 .footer {
-  min-height: 100px;
+  min-height: 50px;
   background-color: darkkhaki;
 }
