добавил обработку сигналов, добавил 1й скрипт

--- a/Chat/templates/default.html
+++ b/Chat/templates/default.html
@@ -52,6 +52,7 @@
             {% endif %}
           </div>
         </div>
+        <script src="{% static 'scripts/script.js' %}" async="true"></script>
         {% endblock content%}
       </main>
       <footer class="footer"></footer>
