добавил чат комнаты

--- a/Chat/templates/default.html
+++ b/Chat/templates/default.html
@@ -32,14 +32,12 @@
             </nav>
           <div class="MiddleColumn">
             <h3>Сообщения</h3>
+            <ul class="messages"></ul>
           </div>
           <div class="RightColumn">
             <h3>Пользователи</h3>
-            {% if users %}
             <ul class="users">
-
             </ul>
-            {% endif %}
           </div>
         </div>
         <script src="{% static 'scripts/script.js' %}" async="true"></script>
