--- a/Chat/templates/default.html
+++ b/Chat/templates/default.html
@@ -27,18 +27,14 @@
         <div class="MainWrapper">
           <nav class="leftColumn">
             <h3>Чаты</h3>
-            <ul class="rooms">
-
-            </nav>
+            <ul class="rooms"></ul>
+          {% if user.is_authenticated %}
+          <a class="room-button" href="/create">Создать</a>
+          {% endif %}
+          </nav>
           <div class="MiddleColumn">
             <h3>Сообщения</h3>
             <ul class="messages"></ul>
-            {% if user.is_authenticated %}  
-            <form id="form" class="message_form" action="/api/message/" method="post">
-              <input type="text" id="message_form" name="message" placeholder="Ваше сообщение" required>
-              <button type="submit">Отправить</button>
-            </form>
-            {% endif %}
           </div>
           <div class="RightColumn">
             <h3>Пользователи</h3>
@@ -46,7 +42,7 @@
             </ul>
           </div>
         </div>
-        <script src="{% static 'scripts/script.js' %}" async="true"></script>
+        <script src="{% static 'scripts/script.js' %}"></script>
         {% endblock content%}
       </main>
       <footer class="footer"></footer>
