--- a/Chat/templates/default.html
+++ b/Chat/templates/default.html
@@ -13,7 +13,7 @@
           <ul class="topmenu">
             <li><a href="/">Домой</a></li>
             {% if user.is_authenticated %}
-            <li><a href="/accounts/{{ user.id }}">{{ user }}</a></li>
+            <li id="user"><a href="/accounts/{{ user.id }}">{{ user }}</a></li>
             <li><a href="/accounts/logout">Выход</a></li>
             {% else %}
             <li><a href="/accounts/signup">Зарегистрироваться</a></li>
