--- a/Chat/static/style/lk/style.css
+++ b/Chat/static/style/lk/style.css
@@ -72,7 +72,7 @@ body {
 
 .column {
   margin: 1rem;
-  width: 30%;
+  width: 33%;
 }
 
 .leftColumn {
@@ -203,4 +203,9 @@ button {
 
 .li-on {
   background-color: #a6ecc9;
+}
+
+label {
+  margin: 0.8rem 0;
+
 }
