--- a/Chat/templates/messenger/create_room.html
+++ b/Chat/templates/messenger/create_room.html
@@ -7,17 +7,27 @@
   href="{% static 'style/messenger/itc-custom-select.css' %}"
 />
 <div class="MainWrapper">
-    <form id="create_room" method="post" action="/api/room/" class="form">
+<form id="create_room" method="post" action="/api/room/" class="form">
         {% csrf_token %}
         <div class="column">
+            <label>Название комнаты
             <input class="itc-select__toggle" type="text" name="name">
+            </label>
         </div>
         <div class="column">
-            <input class="itc-select__toggle" type="submit" value="Создать">
+            <label>Выберите участников
+            <select class="selector" name="members" multiple>
+
+            </select>
+            </label>
+        </div>
+        <div class="column">
+            <button class="submit-button" type="submit" value="Создать">Создать</button>
         </div>
     </form>
-<!--    <script type="module" src="{% static 'scripts/create_room.js' %}"></script>-->
+    <script src="{% static 'scripts/create_room.js' %}"></script>
 </div>
 {% else %}
+<h2 align="center">Войдите или зарегистрируйтесь</h2>
 <h2 align="center">Войдите или зарегистрируйтесь</h2>
 {% endif%} {% endblock %}
