--- a/Chat/templates/default.html
+++ b/Chat/templates/default.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="{% static 'style/lk/style.css' %}" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="{% static 'style/lk/style.css' %}"/>
     <title>{% block title %} Чат {% endblock title %}</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <header class="header">
+</head>
+<body>
+<div class="wrapper">
+    <header class="header">
         <nav>
-          <ul class="topmenu">
-            <li><a href="/">Домой</a></li>
-            {% if user.is_authenticated %}
-            <li id="user"><a href="/accounts/{{ user.id }}">{{ user }}</a></li>
-            <li><a href="/accounts/logout">Выход</a></li>
-            {% else %}
-            <li><a href="/accounts/signup">Зарегистрироваться</a></li>
-            <li><a href="/accounts/login">Вход</a></li>
-            {% endif %}
-          </ul>
+            <ul class="topmenu">
+                <li><a href="/">Домой</a></li>
+                {% if user.is_authenticated %}
+                    <li id="user"><a href="/accounts/{{ user.id }}">{{ user }}</a></li>
+                    <li><a href="/accounts/logout">Выход</a></li>
+                {% else %}
+                    <li><a href="/accounts/signup">Зарегистрироваться</a></li>
+                    <li><a href="/accounts/login">Вход</a></li>
+                {% endif %}
+            </ul>
         </nav>
-      </header>
-      <main class="main">
+    </header>
+    <main class="main">
         {% block content %}
-        <div class="MainWrapper">
-          <nav class="leftColumn">
-            <h3>Чаты</h3>
-            <ul class="rooms"></ul>
-            {% if user.is_authenticated %}
-            <a class="room-button" href="/create">Создать</a>
-            {% endif %}
-          </nav>
-          <div class="MiddleColumn">
-            <h3>Сообщения</h3>
-            <ul class="messages"></ul>
-          </div>
-          <div class="RightColumn">
-            <h3>Пользователи</h3>
-            <ul class="users"></ul>
-          </div>
-        </div>
-        <script src="{% static 'scripts/script.js' %}"></script>
-        {% endblock content%}
-      </main>
-      <footer class="footer"></footer>
-    </div>
-  </body>
+            <div class="MainWrapper">
+                <nav class="leftColumn">
+                    <h3>Чаты</h3>
+                    <ul class="rooms">
+                    </ul>
+                    {% if user.is_authenticated %}
+                        <a class="room-button" href="/create">Создать</a>
+                    {% endif %}
+                </nav>
+                <div class="MiddleColumn">
+                    <h3>Сообщения</h3>
+                    <ul class="messages"></ul>
+                </div>
+                <div class="RightColumn">
+                    <h3>Пользователи</h3>
+                    <ul class="users"></ul>
+                </div>
+            </div>
+            <script type="module" src="{% static 'scripts/script.js' %}">
+            </script>
+
+{#            <script type="module" src="{% static 'scripts/room.js' %}"></script>#}
+        {% endblock content %}
+    </main>
+    <footer class="footer"></footer>
+</div>
+</body>
 </html>
