--- a/Chat/templates/messenger/create_room.html
+++ b/Chat/templates/messenger/create_room.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         <div class="column">
             <label>Название комнаты
-            <input class="itc-select__toggle" type="text" name="name">
+            <input class="selector" type="text" name="name">
             </label>
         </div>
         <div class="column">
@@ -25,7 +25,7 @@
             <button class="submit-button" type="submit" value="Создать">Создать</button>
         </div>
     </form>
-    <script src="{% static 'scripts/create_room.js' %}"></script>
+    <script type="module" src="{% static './scripts/create_room.js' %}"></script>
 </div>
 {% else %}
 <h2 align="center">Войдите или зарегистрируйтесь</h2>
