--- a/Chat/static/style/messenger/itc-custom-select.css
+++ b/Chat/static/style/messenger/itc-custom-select.css
@@ -12,9 +12,9 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    /*width: 90%;*/
     padding: 0.375rem 0.75rem;
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-style: italic;
     line-height: 1.4;
     background-color: #fff;
