--- a/style/style.css
+++ b/style/style.css
@@ -3,20 +3,20 @@
     padding: 0;
 }
 
-html * {
-    max-height: 1000000px;
-}
-
 html, body {
     background-color: #dfdfdf;
     color: #034769;
     height: 100%;
     font-family: sans-serif;
-    font-size: 32px;
+    font-size: 12px;
 }
 
 p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+}
+
+header h2, h3 {
+    color: #FFCA40;
 }
 
 main {
@@ -38,13 +38,62 @@ header {
     display: flex;
     align-content: center;
     flex-wrap: wrap;
-    margin: 0 1rem;
+    padding: 1rem 1rem;
+}
+
+.logo-popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popup-content {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.popup-content img {
+    border-radius: 0;
+    width: auto;
+    height: auto;
+    cursor: default;
+    border: 1px solid #034769;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.close {
+    color: #aaa;
+    font-size: 4rem;
+    font-weight: bold;
+    position: fixed;
+    top: 2vh;
+    left: 85vw;
+}
+
+.close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 header img {
     width: 200px;
     height: 200px;
     border-radius: 50%;
+    cursor: pointer;
+    border: 1px solid #034769;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 header p {
@@ -80,7 +129,7 @@ section {
 
 .collapsible:after {
     content: '\02795'; /* Unicode character for "plus" sign (+) */
-    font-size: 2rem;
+    font-size: 1.5rem;
     float: right;
 }
 
@@ -99,7 +148,7 @@ section {
         "midlle midlle"
         "end end";
     overflow: hidden;
-    background-color: #f1f1f1;
+    background-color: mintcream;
 }
 
 .grid-item {
@@ -177,4 +226,139 @@ footer {
     justify-content: flex-end;
     flex-wrap: wrap;
     align-content: center;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+    grid-area: 1/1/2/3;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: #FF6840;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/* Container around content */
+.container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 45%;
+}
+
+/* The circles on the timeline */
+.container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: white;
+    border: 4px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+    left: 0;
+}
+
+/* Place the container to the right */
+.right {
+    left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid #cc2d2d;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #ea9e41 transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+    left: -16px;
+}
+
+/* The actual content */
+.timeline-content {
+    padding: 20px 30px;
+    background-color: #c99965;
+    position: relative;
+    border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media (max-width: 600px) {
+    header img {
+        width: 100px;
+        height: 100px;
+    }
+
+    /* Place the timelime to the left */
+    .timeline::after {
+        left: 31px;
+    }
+
+    html, body {
+        font-size: 12px;
+    }
+
+    /* Full-width containers */
+    .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+
+    /* Make sure that all arrows are pointing leftwards */
+    .container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+
+    /* Make sure all circles are at the same spot */
+    .left::after, .right::after {
+        left: 15px;
+    }
+
+    /* Make all right containers behave like the left ones */
+    .right {
+        left: 0%;
+    }
 }
